--- a/src/definitions/modules/rating.less
+++ b/src/definitions/modules/rating.less
@@ -27,7 +27,6 @@
   display: @display;
   font-size: 0em;
   vertical-align: @verticalAlign;
-  margin: @margin;
 }
 .ui.rating:last-child {
   margin-right: 0em;
